--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Python 2.7 Jupyter Notebook</div>"
+    "<div align=\"right\">Python 3.6 Jupyter Notebook</div>"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -141,9 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load WiFi data.\n",
@@ -154,9 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load location data.\n",
@@ -174,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Remove columns from WiFi dataset.\n",
@@ -187,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Remove irrelevant columns from location dataset.\n",
@@ -210,9 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot histogram of accuracy observations.\n",
@@ -231,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Review the dataset with Pandas decribe function.\n",
@@ -250,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Determine the number of records meeting our threshold of 40 for accuracy.\n",
@@ -270,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Make a copy of the original dataset before applying the filter.\n",
@@ -299,9 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Update the object to remove accuracy.\n",
@@ -344,9 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set the index for WiFi.\n",
@@ -357,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set the index for location.\n",
@@ -380,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Join the two data sets and display the head of the new dataset.\n",
@@ -401,9 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create object u00_groups.\n",
@@ -459,9 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display the head of the geomedians object.\n",
@@ -503,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Group access points as static or non-static.\n",
@@ -520,7 +490,7 @@
     "for BSSID, distances in u00_distances.items():\n",
     "    \n",
     "    all_count  = len(distances)\n",
-    "    near_count = len(filter(lambda distance: distance <= distance_threshold, distances))\n",
+    "    near_count = len(list(filter(lambda distance: distance <= distance_threshold, distances)))\n",
     "    \n",
     "    if( near_count / all_count >= confidence_level ):\n",
     "        static.append(BSSID)\n",
@@ -541,9 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the access points on a map.\n",
@@ -569,9 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import additional library and set access points to review.\n",
@@ -600,9 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u00_geo_medians.loc[[bssid1, bssid2]]"
@@ -618,9 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate and display the difference between calculated and Google API provided locations.\n",
@@ -678,7 +640,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -713,9 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Iterate through the files in the specified directory and append the results of the function to the all_geotags variable.\n",
@@ -735,9 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"{} all geotags found\".format(len(all_geotags)))\n",
@@ -763,9 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create a new variable containing all the coordinates.\n",
@@ -801,9 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the distances from the median.\n",
@@ -832,9 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Group access points as static or non-static.\n",
@@ -849,7 +801,7 @@
     "for BSSID, distances in all_distances.items():\n",
     "    \n",
     "    all_count  = len(distances)\n",
-    "    near_count = len(filter(lambda distance: distance <= distance_threshold, distances))\n",
+    "    near_count = len(list(filter(lambda distance: distance <= distance_threshold, distances)))\n",
     "    \n",
     "    if( near_count / all_count >= confidence_level ):\n",
     "        all_static.append(BSSID)\n",
@@ -871,8 +823,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1043,23 +994,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
