--- a/module_3/M3_NB2_NoiseVsBias.ipynb
+++ b/module_3/M3_NB2_NoiseVsBias.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Python 2.7 Jupyter Notebook</div>"
+    "<div align=\"right\">Python 3.6 Jupyter Notebook</div>"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
     "    plt.hist(xx)    \n",
     "    plt.axvline(np.mean(xx), color='r', linestyle='dashed', linewidth=2)\n",
     "    plt.title(s)\n",
-    "    print 'mean = {}, std = {}.'.format(np.mean(xx), np.std(xx))\n",
+    "    print('mean = {}, std = {}.'.format(np.mean(xx), np.std(xx)))\n",
     "    \n",
     "# Create a new points list where we introduce bias using choice and random from the random library.\n",
     "# https://docs.python.org/2/library/random.html\n",
@@ -245,9 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Example data.\n",
@@ -289,9 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create image object and load properties to a variable using the image library from PIL.\n",
@@ -328,7 +324,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -348,9 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Introduce random error to the data assigned to the \"points\" variable \n",
@@ -372,9 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Introduce bias error to the data assigned to the \"points\" variable \n",
@@ -520,9 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "im = Image.open(\"dtu_map.png\")\n",
@@ -540,9 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create color dictionary.\n",
@@ -569,7 +556,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -577,8 +564,8 @@
     "pixdata = im.load()\n",
     "\n",
     "# Change the building color.\n",
-    "for y in xrange(im.size[1]):\n",
-    "    for x in xrange(im.size[0]):\n",
+    "for y in range(im.size[1]):\n",
+    "    for x in range(im.size[0]):\n",
     "        if pixdata[x, y] == (244, 243, 236, 255):    # check for current building color\n",
     "            pixdata[x, y] = (50, 50, 255, 255)       # replace with new color\n",
     "\n",
@@ -623,23 +610,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
